[gd_scene load_steps=15 format=3 uid="uid://fyhb6ixjiv8t"]

[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_5nke3"]
[ext_resource type="Texture2D" uid="uid://o20p4tpcgqqk" path="res://assets/sprite_sheets/poring.png" id="1_de2fo"]
[ext_resource type="Theme" uid="uid://d24xi7m4k637h" path="res://assets/theme/default_theme.tres" id="3_6owon"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qrdx8"]
atlas = ExtResource("1_de2fo")
region = Rect2(0, 0, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_sufrx"]
atlas = ExtResource("1_de2fo")
region = Rect2(41, 0, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_53f2x"]
atlas = ExtResource("1_de2fo")
region = Rect2(82, 0, 41, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja1us"]
atlas = ExtResource("1_de2fo")
region = Rect2(123, 0, 41, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_pg312"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrdx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sufrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53f2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja1us")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xyoir"]
bg_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yifgi"]
bg_color = Color(0.952941, 0, 0.227451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_bryk2"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-304, -80), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tvis8"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-304, -104), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_attack_hit"
}]
}

[sub_resource type="Animation" id="Animation_y3dhv"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v3x8m"]
_data = {
"RESET": SubResource("Animation_bryk2"),
"attack": SubResource("Animation_tvis8"),
"idle": SubResource("Animation_y3dhv")
}

[node name="Enemy" type="Node2D" node_paths=PackedStringArray("animator")]
script = ExtResource("1_5nke3")
animator = NodePath("AnimationPlayer")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_pg312")

[node name="DamageTarget" type="Node2D" parent="AnimatedSprite2D"]
unique_name_in_owner = true
position = Vector2(14.6667, -8)

[node name="HealthBar" type="ProgressBar" parent="AnimatedSprite2D"]
offset_left = -20.0
offset_top = -29.0
offset_right = 113.0
offset_bottom = -2.0
scale = Vector2(0.3, 0.3)
theme = ExtResource("3_6owon")
theme_override_styles/background = SubResource("StyleBoxFlat_xyoir")
theme_override_styles/fill = SubResource("StyleBoxFlat_yifgi")
value = 50.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v3x8m")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
